buildscript {
    ext.kotlin_version = '1.3.50'
    dependencies {
        classpath 'org.owasp:dependency-check-gradle:5.2.1'
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
    repositories {
        mavenLocal()
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = 'https://artylab.expedia.biz:443/public-maven-virtual/'
    }
}

dependencies {
    compile 'org.apache.commons:commons-collections4:4.1'
    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.50'
    testCompile 'junit:junit:4.12'
    testCompile 'org.jetbrains.kotlin:kotlin-test:1.3.50'
}

apply plugin: 'org.owasp.dependencycheck'
apply plugin: 'kotlin'

group = 'com.expedia.www'
version = '1.0-SNAPSHOT'
sourceCompatibility = 11
targetCompatibility = 11

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

test {
    jvmArgs '--enable-preview'
    testLogging {
        showStandardStreams = true
    }
}
jar {
    manifest {
        attributes "Main-Class": "refactor.app.RefactorUI"
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "11"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "11"
    }
}
sourceSets {
    main.java.srcDirs += 'src/main/kotlin/'
    test.java.srcDirs += 'src/test/kotlin/'
}
